--- a/src/site/resources/functional-web-testing.html
+++ b/src/site/resources/functional-web-testing.html
@@ -165,18 +165,25 @@
     
     <div id="language-support" class="step bulleted" data-x="-7000" data-y="4600">
       <h1>Language Support</h1>
+      <div class="left">
       <ul>
         <li>C#</li>
         <li>Haskell</li>
         <li>Java</li>
         <li>Javascript</li>
         <li>Objective-C</li>
+      </ul>
+      </div>
+      <div class="right">
+      <ul>
         <li>Perl</li>
         <li>PHP</li>
         <li>Python</li>
         <li>R</li>
         <li>Ruby</li>
       </ul>
+      </div>
+      <div class="clear"></div>
     </div>
     
     <div id="browser-support" class="step bulleted" data-x="-6000" data-y="4600">
