--- a/src/site/resources/functional-web-testing.html
+++ b/src/site/resources/functional-web-testing.html
@@ -339,12 +339,12 @@
     <div id="resources-psu" class="step bulleted" data-x="-6000" data-y="7000">
       <h1>Resources - Penn State</h1>
       <ul>
-        <li><a href="">Code for this presentation</a></li>
+        <li><a href="https://github.com/selesy/web-testing-presentations/tree/master/src/site/resources">Code for this presentation</a></li>
         <li><a href="https://github.com/selesy/web-testing-presentations/tree/master/functional-test-examples">Code for demonstration and examples shown in this presentation</a></li>
       </ul>
     </div>
 
-    <div id="resources-Other" class="step bulleted" data-x="-5000" data-y="7000">
+    <div id="resources-other" class="step bulleted" data-x="-5000" data-y="7000">
       <h1>Resources - Other</h1>
       <ul>
         <li><a href="http://saucelabs.com/">Commercial Selenium Grid service - SauceLabs</a></li>
