Finished layout of whole show and added self-link to presentation.

--- a/src/site/resources/security-web-testing.html
+++ b/src/site/resources/security-web-testing.html
@@ -128,9 +128,36 @@
       <h1>OWASP Zed Attack Proxy</h1>
     </div>
 
-    <div id="zaproxy-image" class="step slide slide-image" data-x="1500" data-y="2000">
-      <h1>ZAProxy Image</h1>
-      <img src="somewhere.png" />
+    <div id="zaproxy-features" class="step slide slide-bulleted" data-x="1500" data-y="2000">
+      <h1>ZAProxy Features</h1>
+      <ul>
+        <li></li>
+      </ul>
+    </div>
+
+    <div id="zaproxy-pros" class="step slide slide-bulleted" data-x="3000" data-y="2000">
+      <h1>ZAProxy Pros</h1>
+      <ul>
+        <li></li>
+      </ul>
+    </div>
+
+    <div id="zaproxy-cons" class="step slide slide-bulleted" data-x="4500" data-y="2000">
+      <h1>ZAProxy Cons</h1>
+      <ul>
+        <li></li>
+      </ul>
+    </div>
+    
+    <div id="zaproxy-demo" class="step slide slide-section" data-x="6000" data-y="2000">
+      <h1>Demo</h1>
+    </div>
+
+    <div id="zaproxy-automation" class="step slide slide-bulleted" data-x="7500" data-y="2000">
+      <h1>ZAProxy Automation</h1>
+      <ul>
+        <li></li>
+      </ul>
     </div>
 
 
@@ -219,6 +246,38 @@
       <h1>Burp Suite</h1>
     </div>
 
+    <div id="burpsuite-features" class="step slide slide-bulleted" data-x="1500" data-y="4000">
+      <h1>Burp Suite Features</h1>
+      <ul>
+        <li></li>
+      </ul>
+    </div>
+
+    <div id="burpsuite-pros" class="step slide slide-bulleted" data-x="3000" data-y="4000">
+      <h1>Burp Suite Pros</h1>
+      <ul>
+        <li></li>
+      </ul>
+    </div>
+
+    <div id="burpsuite-cons" class="step slide slide-bulleted" data-x="4500" data-y="4000">
+      <h1>Burp Suite Cons</h1>
+      <ul>
+        <li></li>
+      </ul>
+    </div>
+    
+    <div id="burpsuite-demo" class="step slide slide-section" data-x="6000" data-y="4000">
+      <h1>Demo</h1>
+    </div>
+
+    <div id="burpsuite-automation" class="step slide slide-bulleted" data-x="7500" data-y="4000">
+      <h1>Burp Suite Automation</h1>
+      <ul>
+        <li></li>
+      </ul>
+    </div>
+
 
 
 
@@ -227,24 +286,29 @@
       <h1>Additional Tools</h1>
     </div>
 
-    <div id="additional-commercial" class="step slide slide-bulleted" data-x="1500" data-y="5000">
+    <div id="additional-Java" class="step slide slide-bulleted" data-x="1500" data-y="5000">
+      <h1>Java Tools</h1>
+    </div>
+
+    <div id="additional-commercial" class="step slide slide-bulleted" data-x="3000" data-y="5000">
       <h1>Commercial Tools</h1>
     </div>
 
-    <div id="questions" class="step slide slide-section" data-x="3000" data-y="5000">
+    <div id="questions" class="step slide slide-section" data-x="4500" data-y="5000">
       <h1>Questions</h1>
     </div>
 
-    <div id="contact" class="step slide slide-section" data-x="4500" data-y="5000">
+    <div id="contact" class="step slide slide-bulleted" data-x="6000" data-y="5000">
       <h1>Contact Information</h1>
       <ul>
         <li>smoyer@psu.edu</li>
         <li>smoyer64 on GitHub</li>
         <li>swm16@chat.psu.edu (XMPP Chat)</li>
+        <li><a href="https://htmlpreview.github.io/?https://github.com/selesy/web-testing-presentations/blob/master/src/site/resources/security-web-testing.html#/title">This presentation</a></li>
       </ul>
     </div>
 
-    <div id="references-1" class="step slide slide-bulleted" data-x="6000" data-y="5000">
+    <div id="references-1" class="step slide slide-bulleted" data-x="7500" data-y="5000">
       <h1>References</h1>
       <ul>
         <li><a href="https://www.owasp.org/index.php/OWASP_Zed_Attack_Proxy_Project">ZED Attack Proxy</a></li>
@@ -253,7 +317,7 @@
       </ul>
     </div>
 
-    <div id="references-2" class="step slide slide-bulleted" data-x="7500" data-y="5000">
+    <div id="references-2" class="step slide slide-bulleted" data-x="9000" data-y="5000">
       <h1>References (continued)</h1>
       <ul>
         <li><a href="http://findbugs.sourceforge.net/findbugs2.html#plugins">FindBugs</a></li>
