Finished zaproxy section.

--- a/src/site/resources/security-web-testing.html
+++ b/src/site/resources/security-web-testing.html
@@ -131,21 +131,30 @@
     <div id="zaproxy-features" class="step slide slide-bulleted" data-x="1500" data-y="2000">
       <h1>ZAProxy Features</h1>
       <ul>
-        <li></li>
+        <li>Spider and manual URL discovery</li>
+        <li>Proxy for browser-based exploration</li>
+        <li>Per page scanning</li>
+        <li>Reporting by severity and URL</li>
       </ul>
     </div>
 
     <div id="zaproxy-pros" class="step slide slide-bulleted" data-x="3000" data-y="2000">
       <h1>ZAProxy Pros</h1>
       <ul>
-        <li></li>
+        <li>Finds problems outlined by OWASP Top Ten</li>
+        <li>Security scanning can be saved and replayed</li>
+        <li>Add-ons</li>
+        <li>Templates</li>
+        <li>Huge ecosystem of developers in an active community</li>
       </ul>
     </div>
 
     <div id="zaproxy-cons" class="step slide slide-bulleted" data-x="4500" data-y="2000">
       <h1>ZAProxy Cons</h1>
       <ul>
-        <li></li>
+        <li>Printable reports</li>
+        <li>Authentication with SSO</li>
+        <li>Authentication with second factor</li>
       </ul>
     </div>
     
@@ -156,7 +165,10 @@
     <div id="zaproxy-automation" class="step slide slide-bulleted" data-x="7500" data-y="2000">
       <h1>ZAProxy Automation</h1>
       <ul>
-        <li></li>
+        <li>Headless mode</li>
+        <li>REST API via internal server</li>
+        <li>CLI (cURL) or continuous integration</li>
+        <li>Replay saved test profiles</li>
       </ul>
     </div>
 
