--- a/src/site/resources/security-web-testing.html
+++ b/src/site/resources/security-web-testing.html
@@ -208,6 +208,7 @@
           It is the end user's responsibility to obey all applicable local, state and federal laws. Developers assume no
           liability and are not responsible for any misuse or damage caused by this program"</li>
         <li>Can be very slow</li>
+        <li>Authentication with SSO and/or second factor</li>
       </ul>
     </div>
 
@@ -261,21 +262,26 @@
     <div id="burpsuite-features" class="step slide slide-bulleted" data-x="1500" data-y="4000">
       <h1>Burp Suite Features</h1>
       <ul>
-        <li></li>
+        <li>Spider</li>
+        <li>Proxy</li>
+        <li>Inspection tools</li>
+        <li>Macros</li>
       </ul>
     </div>
 
     <div id="burpsuite-pros" class="step slide slide-bulleted" data-x="3000" data-y="4000">
       <h1>Burp Suite Pros</h1>
       <ul>
-        <li></li>
+        <li>Macros+Proxy can handle SSO Authentication</li>
+        <li>Macros can eliminate repetitive sequences</li>
       </ul>
     </div>
 
     <div id="burpsuite-cons" class="step slide slide-bulleted" data-x="4500" data-y="4000">
       <h1>Burp Suite Cons</h1>
       <ul>
-        <li></li>
+        <li>Automated attacks are part of the Pro (paid) version</li>
+        <li>Save and restore are part of the Pro (paid) version</li>
       </ul>
     </div>
     
@@ -286,7 +292,7 @@
     <div id="burpsuite-automation" class="step slide slide-bulleted" data-x="7500" data-y="4000">
       <h1>Burp Suite Automation</h1>
       <ul>
-        <li></li>
+        <li>None (See Pro version)</li>
       </ul>
     </div>
 
@@ -300,10 +306,19 @@
 
     <div id="additional-Java" class="step slide slide-bulleted" data-x="1500" data-y="5000">
       <h1>Java Tools</h1>
+      <ul>
+        <li>FindBugs Security Plugin</li>
+        <li>SonarQube OWASP Plugin</li>
+      </ul>
     </div>
 
     <div id="additional-commercial" class="step slide slide-bulleted" data-x="3000" data-y="5000">
       <h1>Commercial Tools</h1>
+      <ul>
+        <li>Burp Suite Pro</li>
+        <li>Security Center/Nessus</li>
+        <li>Hailstorm</li>
+      </ul>
     </div>
 
     <div id="questions" class="step slide slide-section" data-x="4500" data-y="5000">
@@ -317,6 +332,7 @@
         <li>smoyer64 on GitHub</li>
         <li>swm16@chat.psu.edu (XMPP Chat)</li>
         <li><a href="https://htmlpreview.github.io/?https://github.com/selesy/web-testing-presentations/blob/master/src/site/resources/security-web-testing.html#/title">This presentation</a></li>
+        <li>http://bit.ly/1U6Zx8M</li>
       </ul>
     </div>
 
